Updated css to ensure save link is visible for auth case types

--- a/src/components/custom-sdk/template/HMRC_ODX_GDSTaskListTemplate/TaskListTemplate.css
+++ b/src/components/custom-sdk/template/HMRC_ODX_GDSTaskListTemplate/TaskListTemplate.css
@@ -8,6 +8,10 @@ form:has(div.u-tasklist) .govuk-form-group {
   margin-bottom: 0;
 }
 
-form:has(div.u-tasklist) .govuk-button-group {
+form:has(div.u-tasklist.unauth) .govuk-button-group {
+  display: none;
+}
+
+form:has(div.u-tasklist.auth) .govuk-button-group button {
   display: none;
 }
